--- a/requirements.txt
+++ b/requirements.txt
@@ -48,6 +48,7 @@ google-auth-oauthlib==0.4.4
 google-pasta==0.2.0
 greenlet==1.1.0
 grpcio==1.38.0
+gunicorn==20.1.0
 h5py==2.10.0
 html5lib==1.1
 idna==2.10
@@ -96,7 +97,7 @@ pyquil==1.9.0
 python-dateutil==2.8.1
 python-jsonrpc-server==0.3.2
 python-language-server==0.31.10
-
+pyxel==1.0.1
 referenceqvm==0.3
 regex==2021.4.4
 replit==3.1.0
